--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/assets/code.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="Akbar" content="Israilov">
     <title>Akbar Israilov</title>
   </head>
   <body>
