--- a/index.html
+++ b/index.html
@@ -1,14 +1,22 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/code.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="Akbar" content="Israilov">
-    <title>Akbar Israilov</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/src/assets/code.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Official website of Akbar Israilov. Web developer, programmer, and more.">
+  <meta name="keywords" content="Akbar Israilov, web developer, programmer, coding, technology">
+  <meta name="author" content="Akbar Israilov">
+  <meta name="robots" content="index, follow">
+  <meta property="og:title" content="Akbar Israilov">
+  <meta property="og:description" content="Official website of Akbar Israilov. Web developer, programmer, and more.">
+  <meta property="og:image" content="/src/assets/code.svg">
+  <meta property="og:url" content="http://akbar-israilov.uz/">
+  <meta property="og:type" content="website">
+  <title>Akbar Israilov</title>
+</head>
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
 </html>
