--- a/index.html
+++ b/index.html
@@ -1,169 +1,195 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="icon" type="image/svg+xml" href="/assets/code.svg" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Open+Sans:wght@400;700&display=swap"
-        rel="stylesheet">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Open+Sans:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="styles.css" />
     <title>Akbar Israilov</title>
-</head>
+  </head>
 
-<body class="header">
+  <body class="header">
     <div class="flex items-center justify-center">
-        <img src="./assets/photo_2023-08-10_11-58-59.jpg" alt="" class="rounded-full" width="200" height="200" />
+      <img
+        src="./assets/photo_2023-08-10_11-58-59.jpg"
+        alt=""
+        class="rounded-full"
+        width="200"
+        height="200"
+      />
     </div>
     <div class="text-white items-center justify-center flex pt-[20px]">
-        <div class="text-white items-center justify-center flex pt-[20px]">
-            <div>
-                <h1 class="text-[#fff] text-[30px]">Akbar Israilov</h1>
-                <div class="text-[18px] ml-[18%] text-[#6f61c2]">Web Developer</div>
-            </div>
+      <div class="text-white items-center justify-center flex pt-[20px]">
+        <div>
+          <h1 class="text-[#fff] text-[30px]">Akbar Israilov</h1>
+          <div class="text-[18px] ml-[18%] text-[#6f61c2]">Web Developer</div>
         </div>
+      </div>
     </div>
-    <div class="flex items-center justify-center gap-6 text-[25px] pt-4 text-[#3547ad]">
-        <a href="https://www.linkedin.com/in/akbar-isroilov-407295256/" class="hover:text-[#6d6bec]">
-            <i class="fa-brands fa-linkedin"></i>
-        </a>
-        <a href="https://github.com/akbar1155" class="hover:text-[#6d6bec]">
-            <i class="fa-brands fa-github"></i>
-        </a>
-        <a href="https://www.facebook.com/profile.php?id=100086628349691" class="hover:text-[#6d6bec]">
-            <i class="fa-brands fa-facebook"></i>
-        </a>
-        <a href="https://t.me/Akbar_Israilov" class="hover:text-[#6d6bec]">
-            <i class="fa-brands fa-telegram"></i>
-        </a>
+    <div
+      class="flex items-center justify-center gap-6 text-[25px] pt-4 text-[#3547ad]"
+    >
+      <a
+        href="https://www.linkedin.com/in/akbar-isroilov-407295256/"
+        class="hover:text-[#6d6bec]"
+      >
+        <i class="fa-brands fa-linkedin"></i>
+      </a>
+      <a href="https://github.com/akbar1155" class="hover:text-[#6d6bec]">
+        <i class="fa-brands fa-github"></i>
+      </a>
+      <a
+        href="https://www.facebook.com/profile.php?id=100086628349691"
+        class="hover:text-[#6d6bec]"
+      >
+        <i class="fa-brands fa-facebook"></i>
+      </a>
+      <a href="https://t.me/Akbar_Israilov" class="hover:text-[#6d6bec]">
+        <i class="fa-brands fa-telegram"></i>
+      </a>
 
-        <a href="https://www.instagram.com/akbar_israilovv/?hl=en" class="hover:text-[#6d6bec]">
-            <i class="fa-brands fa-instagram"></i>
-        </a>
+      <a
+        href="https://www.instagram.com/akbar_israilovv/?hl=en"
+        class="hover:text-[#6d6bec]"
+      >
+        <i class="fa-brands fa-instagram"></i>
+      </a>
 
-        <a href="https://twitter.com/Akbar9040471781" class="hover:text-[#6d6bec]">
-            <i class="fa-brands fa-twitter"></i>
-        </a>
-        <a href="tel:+998932931155" class="hover:text-[#6d6bec]">
-            <i class="fa-solid fa-phone"></i>
-        </a>
+      <a
+        href="https://twitter.com/Akbar9040471781"
+        class="hover:text-[#6d6bec]"
+      >
+        <i class="fa-brands fa-twitter"></i>
+      </a>
+      <a href="tel:+998932931155" class="hover:text-[#6d6bec]">
+        <i class="fa-solid fa-phone"></i>
+      </a>
     </div>
     <div class="grid grid-cols-4 gap-4 text-white mt-8 ml-[10%]">
-        <div class="col-span-2 ... pl-28 text-[20px]">
-            <h2 class="items-center">Frontend</h2>
+      <div class="col-span-2 ... pl-28 text-[20px]">
+        <h2 class="items-center">Frontend</h2>
+      </div>
+      <div class="col-span-2 ... pl-28 text-[20px]">
+        <h2>Additional</h2>
+      </div>
+      <div class="... flex text-white gap-4 items-center">
+        <i class="fas fa-check-circle text-[#4f8ec2] text-[22px]"></i>
+        <div class="text-[14px]">
+          <p>Html , Css</p>
+          <span class="text-[#706b6b]">Advance</span>
         </div>
-        <div class="col-span-2 ... pl-28 text-[20px]">
-            <h2>Additional</h2>
+      </div>
+      <div class="... flex text-white gap-4 items-center">
+        <i class="fas fa-check-circle text-[#4f8ec2] text-[22px]"></i>
+        <div class="text-[14px]">
+          <p>React</p>
+          <span class="text-[#706b6b]">Advance</span>
         </div>
-        <div class="... flex text-white gap-4 items-center">
-            <i class="fas fa-check-circle text-[#4f8ec2] text-[22px]"></i>
-            <div class="text-[14px]">
-                <p>Html , Css</p>
-                <span class="text-[#706b6b]">Advance</span>
-            </div>
+      </div>
+      <div class="... flex text-white gap-4 items-center">
+        <i class="fas fa-check-circle text-[#4f8ec2] text-[22px]"></i>
+        <div class="text-[14px]">
+          <p>Optimisation</p>
+          <span class="text-[#706b6b]">Intermediate</span>
         </div>
-        <div class="... flex text-white gap-4 items-center">
-            <i class="fas fa-check-circle text-[#4f8ec2] text-[22px]"></i>
-            <div class="text-[14px]">
-                <p>React</p>
-                <span class="text-[#706b6b]">Advance</span>
-            </div>
+      </div>
+      <div class="... flex text-white gap-4 items-center">
+        <i class="fas fa-check-circle text-[#4f8ec2] text-[22px]"></i>
+        <div class="text-[14px]">
+          <p>Tailwindcss</p>
+          <span class="text-[#706b6b]">Advance</span>
         </div>
-        <div class="... flex text-white gap-4 items-center">
-            <i class="fas fa-check-circle text-[#4f8ec2] text-[22px]"></i>
-            <div class="text-[14px]">
-                <p>Optimisation</p>
-                <span class="text-[#706b6b]">Intermediate</span>
-            </div>
+      </div>
+      <div class="... flex text-white gap-4 items-center">
+        <i class="fas fa-check-circle text-[#4f8ec2] text-[22px]"></i>
+        <div class="text-[14px]">
+          <p>Nextjs</p>
+          <span class="text-[#706b6b]">Intermediate</span>
         </div>
-        <div class="... flex text-white gap-4 items-center">
-            <i class="fas fa-check-circle text-[#4f8ec2] text-[22px]"></i>
-            <div class="text-[14px]">
-                <p>Tailwindcss</p>
-                <span class="text-[#706b6b]">Advance</span>
-            </div>
+      </div>
+      <div class="... flex text-white gap-4 items-center">
+        <i class="fas fa-check-circle text-[#4f8ec2] text-[22px]"></i>
+        <div class="text-[14px]">
+          <p>Vuejs</p>
+          <span class="text-[#706b6b]">Intermediate</span>
         </div>
-        <div class="... flex text-white gap-4 items-center">
-            <i class="fas fa-check-circle text-[#4f8ec2] text-[22px]"></i>
-            <div class="text-[14px]">
-                <p>Nextjs</p>
-                <span class="text-[#706b6b]">Intermediate</span>
-            </div>
+      </div>
+      <div class="... flex text-white gap-4 items-center">
+        <i class="fas fa-check-circle text-[#4f8ec2] text-[22px]"></i>
+        <div class="text-[14px]">
+          <p>Git</p>
+          <span class="text-[#706b6b]">Advance</span>
         </div>
-        <div class="... flex text-white gap-4 items-center">
-            <i class="fas fa-check-circle text-[#4f8ec2] text-[22px]"></i>
-            <div class="text-[14px]">
-                <p>Vuejs</p>
-                <span class="text-[#706b6b]">Intermediate</span>
-            </div>
+      </div>
+      <div class="... flex text-white gap-4 items-center">
+        <i class="fas fa-check-circle text-[#4f8ec2] text-[22px]"></i>
+        <div class="text-[14px]">
+          <p>MaterialUI</p>
+          <span class="text-[#706b6b]">Advance</span>
         </div>
-        <div class="... flex text-white gap-4 items-center">
-            <i class="fas fa-check-circle text-[#4f8ec2] text-[22px]"></i>
-            <div class="text-[14px]">
-                <p>Git</p>
-                <span class="text-[#706b6b]">Advance</span>
-            </div>
+      </div>
+      <div class="... flex text-white gap-4 items-center">
+        <i class="fas fa-check-circle text-[#4f8ec2] text-[22px]"></i>
+        <div class="text-[14px]">
+          <p>Javascript</p>
+          <span class="text-[#706b6b]">Advance</span>
         </div>
-        <div class="... flex text-white gap-4 items-center">
-            <i class="fas fa-check-circle text-[#4f8ec2] text-[22px]"></i>
-            <div class="text-[14px]">
-                <p>MaterialUI</p>
-                <span class="text-[#706b6b]">Advance</span>
-            </div>
+      </div>
+      <div class="... flex text-white gap-4 items-center">
+        <i class="fas fa-check-circle text-[#4f8ec2] text-[22px]"></i>
+        <div class="text-[14px]">
+          <p>Scss</p>
+          <span class="text-[#706b6b]">Advance</span>
         </div>
-        <div class="... flex text-white gap-4 items-center">
-            <i class="fas fa-check-circle text-[#4f8ec2] text-[22px]"></i>
-            <div class="text-[14px]">
-                <p>Javascript</p>
-                <span class="text-[#706b6b]">Advance</span>
-            </div>
+      </div>
+      <div class="... flex text-white gap-4 items-center">
+        <i class="fas fa-check-circle text-[#4f8ec2] text-[22px]"></i>
+        <div class="text-[14px]">
+          <p>AntDesign</p>
+          <span class="text-[#706b6b]">Advance</span>
         </div>
-        <div class="... flex text-white gap-4 items-center">
-            <i class="fas fa-check-circle text-[#4f8ec2] text-[22px]"></i>
-            <div class="text-[14px]">
-                <p>Scss</p>
-                <span class="text-[#706b6b]">Advance</span>
-            </div>
+      </div>
+      <div class="... flex text-white gap-4 items-center">
+        <i class="fas fa-check-circle text-[#4f8ec2] text-[22px]"></i>
+        <div class="text-[14px]">
+          <p>Bootstrap</p>
+          <span class="text-[#706b6b]">Advance</span>
         </div>
-        <div class="... flex text-white gap-4 items-center">
-            <i class="fas fa-check-circle text-[#4f8ec2] text-[22px]"></i>
-            <div class="text-[14px]">
-                <p>AntDesign</p>
-                <span class="text-[#706b6b]">Advance</span>
-            </div>
+      </div>
+      <div class="... flex text-white gap-4 items-center">
+        <i class="fas fa-check-circle text-[#4f8ec2] text-[22px]"></i>
+        <div class="text-[14px]">
+          <p>Typescript</p>
+          <span class="text-[#706b6b]">Intermediate</span>
         </div>
-        <div class="... flex text-white gap-4 items-center">
-            <i class="fas fa-check-circle text-[#4f8ec2] text-[22px]"></i>
-            <div class="text-[14px]">
-                <p>Bootstrap</p>
-                <span class="text-[#706b6b]">Advance</span>
-            </div>
+      </div>
+      <div class="... flex text-white gap-4 items-center">
+        <i class="fas fa-check-circle text-[#4f8ec2] text-[22px]"></i>
+        <div class="text-[14px]">
+          <p>Rest Api</p>
+          <span class="text-[#706b6b]">Advance</span>
         </div>
-        <div class="... flex text-white gap-4 items-center">
-            <i class="fas fa-check-circle text-[#4f8ec2] text-[22px]"></i>
-            <div class="text-[14px]">
-                <p>Typescript</p>
-                <span class="text-[#706b6b]">Intermediate</span>
-            </div>
-        </div>
-        <div class="... flex text-white gap-4 items-center">
-            <i class="fas fa-check-circle text-[#4f8ec2] text-[22px]"></i>
-            <div class="text-[14px]">
-                <p>Rest Api</p>
-                <span class="text-[#706b6b]">Advance</span>
-            </div>
-        </div>
+      </div>
     </div>
 
-    <span class="flex justify-center text-white mt-16">Akbar Israilov 2023</span>
+    <span class="flex justify-center text-white mt-16"
+      >Akbar Israilov 2023</span
+    >
     <script src="https://unpkg.com/@ant-design/icons/dist/index.umd.js"></script>
     <script src="./App.js"></script>
-</body>
-
+  </body>
 </html>
